--- a/committee_abstract.tex
+++ b/committee_abstract.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
-\usepackage{fullpage}
+\usepackage[margin=1.0in]{geometry}
+\thispagestyle{empty}
 \begin{document}
 \input{abstract.tex}
 \end{document}
