--- a/abstract.tex
+++ b/abstract.tex
@@ -34,7 +34,7 @@ Logic languages stand as a strong candidate to resolve this conundrum. Unfortuna
 The version of backwards chaining employed by Prolog has explicit execution order, and so too falls victim to being too inflexible to allow the scheduling of available resources. I will explore the space of executing logic programs with external predicates that may not terminate, and may be prohibitively expensive to use everywhere, with direct application to binary analysis.
 
 %This is Holmes
-I intend to build \sysname\, a logic language inspired by datalog with several features geared towards the ability to use a logic program as a means of coordinating several independent analyses.
+I intend to build \sysname, a logic language inspired by Datalog with several features geared towards the ability to use a logic program as a means of coordinating several independent analyses.
 %Features:
 % Forwards + Backwards chaining
 % Caching
