Fix sysname to work with multi-file compilation

--- a/proposal/committee_abstract.tex
+++ b/proposal/committee_abstract.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[margin=1.0in]{geometry}
 \thispagestyle{empty}
+\newcommand{\sysname}{Holmes}
 \begin{document}
 \input{abstract.tex}
 \end{document}
