--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -14,8 +14,8 @@
 %    An explanation as to why this topic is interesting;
 %    A statement as to what kind of results are expected, and;
 %    A convincing argument as to why these results are attainable in a reasonable amount of time.
-
-\title{Holmes}
+\newcommand{\sysname}{Holmes}
+\title{\sysname}
 \author{Matthew Maurer}
 \maketitle
 \begin{abstract}
@@ -26,6 +26,8 @@
 \input{introduction.tex}
 \chapter{Related Work}
 \chapter{Completed Work}
-\chapter{Holmes}
+\chapter{\sysname}
+\section{\sysname\ Basic}
+\label{sec:holmes_basic}
 \chapter{Conclusion}
 \end{document}
