--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -2,6 +2,13 @@
 \usepackage{fullpage}
 \usepackage{hyperref}
 \hypersetup{linktoc=all}
+\usepackage{todonotes}
+
+\usepackage{wasysym}
+\newcommand{\fyes}{\CIRCLE}
+\newcommand{\fhalf}{\LEFTcircle}
+\newcommand{\fno}{\Circle}
+
 %I'll need to double space it for submission, but double
 %spacing is a terrible relic of a time gone by, and hurts
 %my eyes, so we'll turn it on later.
