Added first draft of brief holmes description

--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -2,7 +2,7 @@
 \subsection{Proposed Work}
 %Previous work hits roadblocks, this should address them
 Previous work in binary analysis has run into a number of stumbling blocks related to getting the input information they require to actually make inferences. 
-In Figure~\ref{fig:problems_addressed}, I show where previous work has encountered these issues.
+In Figure~\ref{fig:problemsAddressed}, I show where previous work has encountered these issues.
 Here, dependency cycle means their novel component interacted with another cyclically.
 Expensive optional dependencies indicates the use of an expensive analysis where a cheaper one would usually suffice.
 Unused inputs is marked when the system mentioned other analyses that should give an improvement when combined, but chose not to do so, indicating a barrier to running the analysis and integrating it.
@@ -34,7 +34,7 @@ BiTR & \fno & \fyes & \fyes\\
 \hline
 \end{tabular}
 \caption{Stumbling Blocks}
-\label{fig:problems_addressed}
+\label{fig:problemsAddressed}
 \end{figure*}
 \subsection{Extended Work}
 The use of a logic language oriented approach to describing the relationship between analyses provides a unique opportunity to explore the implications of circumscription in incomplete logic langauges.
@@ -51,7 +51,7 @@ I plan to complete my thesis before Aug 2016.
 \begin{enumerate}
 \item[Now-Apr 2015] Thesis Proposal
 %CCS (Resubmit BiTR unless I've gotten a _long_ way)
-\item[May-Aug 2015] \sysname\ Basic feature complete (\S~\ref{sec:holmes_basic})
+\item[May-Aug 2015] \sysname\ Basic feature complete (\S~\ref{sec:holmesBasic})
 %NDSS (Use holmes to piggyback on Jonathan's inevitable resubmission of firmware systemwide paper?)
 \item[Sep 2015] \sysname / BAP integration
 \item[Oct-Nov 2015]
