--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -18,7 +18,6 @@ I will test \sysname\'s effectiveness by using it to combine several existing an
 I expect to see an increase in modularity and ease of implementation.
 Additionally, I expect to improve output quality if some inputs were neglected.
 Lastly, I anticipate a performance increase in analyses that were using a heavyweight analysis in places where it was not needed.
-\todo{Add citations for table}
 \todo{Add more entries to table}
 \todo{Verify TIE/Phoenix mentioned something they could use}
 \todo{Optional isn't the best word for the expensive deps}
@@ -27,10 +26,10 @@ Lastly, I anticipate a performance increase in analyses that were using a heavyw
 \hline
 Analysis & Dependency Cycle & Expensive Optional Dependencies & Unused Inputs\\
 \hline \hline
-Jakstab & \fyes & \fyes & \fno\\
-Phoenix & \fyes & \fyes & \fyes\\
-TIE & \fno & \fyes & \fyes \\
-BiTR & \fno & \fyes & \fyes\\
+Jakstab\cite{jakstab} & \fyes & \fyes & \fno\\
+Phoenix\cite{phoenix} & \fyes & \fyes & \fyes\\
+TIE\cite{tie} & \fno & \fyes & \fyes \\
+BiTR\cite{bitr} & \fno & \fyes & \fyes\\
 \hline
 \end{tabular}
 \caption{Stumbling Blocks}
