--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -69,6 +69,7 @@ Manuel Egele, Boston University
 \chapter{Introduction}
 \input{introduction.tex}
 \chapter{Related Work}
+\input{related.tex}
 \chapter{Completed Work}
 \input{completed.tex}
 \chapter{\sysname}
@@ -78,6 +79,6 @@ Manuel Egele, Boston University
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
 \bibliographystyle{alphaurl}
-\bibliography{proposal}
+\bibliography{proposal,aux}
 
 \end{document}
