--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -75,6 +75,7 @@ Manuel Egele, Boston University
 \chapter{\sysname}
 \input{holmes.tex}
 \chapter{Conclusion}
+\input{conclusion.tex}
 
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
